Ended ex02 and introduced minor corrections

--- a/module_00/ex02/Makefile
+++ b/module_00/ex02/Makefile
@@ -6,13 +6,13 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:53 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/05/13 00:11:06 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/05/17 00:04:26 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = 
+NAME = bank
 
-SRCS = 	 
+SRCS = Account.cpp tests.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
