--- a/module_01/ex00/Makefile
+++ b/module_01/ex00/Makefile
@@ -12,7 +12,7 @@
 
 NAME = zombie
 
-SRCS = main.cpp zombie.cpp newZombie.ccp randomChamp.cpp
+SRCS = main.cpp Zombie.cpp newZombie.cpp randomChamp.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
