message review in ex05 and added ex06

--- a/module_01/ex06/Makefile
+++ b/module_01/ex06/Makefile
@@ -6,11 +6,11 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/05/24 19:10:46 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/05/24 19:21:04 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = harl_filter
+NAME = harlFilter
 
 SRCS = main.cpp Harl.cpp
 OBJS = $(SRCS:.cpp=.o)
