--- a/module_03/ex00/Makefile
+++ b/module_03/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/06/02 15:13:51 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/06/06 08:17:57 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = 
+NAME = claptrap
 
-SRCS = 
+SRCS = main.cpp ClapTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
