ex03: added Diamond

--- a/module_03/ex03/Makefile
+++ b/module_03/ex03/Makefile
@@ -6,17 +6,17 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/06/02 15:13:51 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/06/09 12:25:55 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = 
+NAME = diamond
 
-SRCS = 
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow
 RM = rm -rf
 
 all: $(NAME)
