ex00: inplemented class Animal

--- a/module_04/ex00/Makefile
+++ b/module_04/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/06/12 01:18:36 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/06/14 19:01:12 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = 
+NAME = animal
 
-SRCS = 
+SRCS = main.cpp Animal.cpp Dog.cpp Cat.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
