--- a/module_04/ex03/Makefile
+++ b/module_04/ex03/Makefile
@@ -6,13 +6,13 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/06/25 18:29:28 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/06/25 18:50:21 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = abstract
+NAME = a.out
 
-SRCS = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
+SRCS = main.cpp AMateria.cpp Ice.hpp Cure.hpp
 OBJS = $(SRCS:.cpp=.o)
 
 CC = c++
