ex03: starting exercise structure

--- a/module_05/ex03/Makefile
+++ b/module_05/ex03/Makefile
@@ -6,21 +6,23 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/07/01 19:30:42 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/07/19 18:06:26 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = buro
+NAME = intern
 
 SRC_DIR = src
 OBJ_DIR = obj
 INC_DIR = inc
 
-SRCS = $(SRC_DIR)/main.cpp $(SRC_DIR)/Bureaucrat.cpp
+SRCS = $(SRC_DIR)/main.cpp $(SRC_DIR)/Bureaucrat.cpp $(SRC_DIR)/AForm.cpp \
+		$(SRC_DIR)/PresidentialPardonForm.cpp $(SRC_DIR)/RobotomyRequestForm.cpp \
+		$(SRC_DIR)/ShrubberyCreationForm.cpp
 OBJS = $(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 
 CC = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -I$(INC_DIR)
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -I$(INC_DIR) -g
 RM = rm -rf
 
 all: $(NAME)
