--- a/module_05/ex03/Makefile
+++ b/module_05/ex03/Makefile
@@ -18,7 +18,7 @@ INC_DIR = inc
 
 SRCS = $(SRC_DIR)/main.cpp $(SRC_DIR)/Bureaucrat.cpp $(SRC_DIR)/AForm.cpp \
 		$(SRC_DIR)/PresidentialPardonForm.cpp $(SRC_DIR)/RobotomyRequestForm.cpp \
-		$(SRC_DIR)/ShrubberyCreationForm.cpp
+		$(SRC_DIR)/ShrubberyCreationForm.cpp $(SRC_DIR)/Intern.cpp
 OBJS = $(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 
 CC = c++
