ex01: first class implementation

--- a/module_08/ex01/Makefile
+++ b/module_08/ex01/Makefile
@@ -6,17 +6,17 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/08/22 07:31:15 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/08/31 15:50:39 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = 
+NAME = span
 
 SRC_DIR = src
 OBJ_DIR = obj
 INC_DIR = inc
 
-SRCS = $(SRC_DIR)/main.cpp 
+SRCS = $(SRC_DIR)/main.cpp $(SRC_DIR)/Span.cpp 
 OBJS = $(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 
 CC = c++
