ex01:  added exceptions implementations

--- a/module_08/ex00/Makefile
+++ b/module_08/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/08/28 22:43:25 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/09/02 19:23:42 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = easy_find
+NAME = ex00
 
 SRC_DIR = src
 OBJ_DIR = obj
