--- a/module_08/ex01/Makefile
+++ b/module_08/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: rda-cunh <rda-cunh@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/10 17:41:50 by rda-cunh          #+#    #+#              #
-#    Updated: 2025/08/31 15:50:39 by rda-cunh         ###   ########.fr        #
+#    Updated: 2025/09/02 19:23:54 by rda-cunh         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = span
+NAME = ex01
 
 SRC_DIR = src
 OBJ_DIR = obj
